--- a/src/main/webapp/resources/theme1/admincss/sb-admin.css
+++ b/src/main/webapp/resources/theme1/admincss/sb-admin.css
@@ -26,8 +26,9 @@ body {
 #page-wrapper {
 	
     width: 100%;
+    height: 200px;
     padding: 0;
-    background-color: #fff;
+    background-color: #222;
 }
 /* enable absolute positioning */
 .inner-addon { 
